<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent"
    android:layout_width="match_parent"


    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_height="300dp"
        android:layout_width="300dp"
        android:contentDescription="@string/recPic"
        android:scaleType="fitCenter"
        android:layout_centerVertical="true"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="4dp"
        android:layout_alignParentTop="true"
        android:id="@+id/recipieView"
        />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/recipe_list_text_layout"
        android:layout_toEndOf="@+id/recipieView"
        android:backgroundTint="@color/grey">


        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/maroon"
            android:textStyle="bold|italic"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/urlView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/maroon"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/descriptionID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_description"
            android:layout_below="@+id/titleView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/maroon"
            android:layout_marginBottom="5dp"
            />

        <TextView
            android:id="@+id/servingsID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servings"
            android:layout_below="@+id/descriptionID"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/maroon"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/preptimeID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepTime"
            android:layout_below="@+id/servingsID"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/maroon"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/dietlabelID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dietLabel"
            android:layout_below="@+id/preptimeID"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/maroon"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/urlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dietlabelID"
            android:layout_centerHorizontal="true"
            android:onClick="urlButtonClicked"
            android:text="@string/urlButton" />

        <ImageView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
</RelativeLayout>